--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -8,6 +8,14 @@
       <h1>{{ title }}</h1>
       <p class="lead">{{ description }}</p>
       <p>The current time is {{ currentTime }}</p>
+      <p>
+        <form class="" action="index.html" method="post">
+          <label for="">
+            field name indexed nGram
+            <input type="text" name="name" value="">
+          </label>
+        </form>
+      </p>
     </div>
   </div>
 </div>
